# mcp-code-exec

./: .env.example  .gitignore  Makefile  README.md  demo.py  pyproject.toml  quickstart.sh
app/: config.py  exceptions.py  main.py
app/agent_core/: code_executor.py  harness.py  monitoring.py  orchestrator.py
app/api/v1/: agent.py  rag.py  weather.py
app/mcp_client/: cache.py  client.py
app/mcp_client/codegen/: __init__.py  cli.py  generator.py  schema_converter.py
app/mcp_client/codegen/templates/: server_init.py.jinja2  tool_module.py.jinja2
app/mcp_client/tools/: invoice_tool.py  postgres_tool.py  rag_tool.py  weather_tool.py
app/prompts/: agent_prompt.py
app/rag/: document_store.py  interfaces.py  models.py  service.py
examples/: test_agent_mcp_tools.py  weather_and_rag_demo.py
scripts/: setup_pg.py  setup_rag.py
servers/: client.py  discovery.py  discovery_old.py.bak
servers/_discovery/: __init__.py  explorer.py
servers/invoice/: __init__.py  fetch_invoices.py  update_anomaly_log.py
servers/postgres_mcp/: __init__.py  safe_executor.py  schema_inspector.py  server.py
servers/postgres_mcp/setup/: schema.sql
servers/rag/: __init__.py  add_documents.py  clear_rag_index.py  get_rag_stats.py  search_documents.py
servers/weather/: __init__.py  get_current_weather.py  get_forecast.py  get_geo_data.py
tests/: test_agent_flow.py  test_code_executor.py  test_mcp_client.py
